<resources>
    <string name="app_name">iGrants</string>
    <string name="menu_mamandyktar">Мамандықтар</string>
    <string name="menu_granttar">Гранттар</string>
    <string name="menu_univer_code">Университеттер</string>
    <string name="menu_hostel">Хостелдер</string>
    <string name="menu_news">Жаңалықтар</string>
    <string name="menu_report">Кеңес жіберу</string>
    <string name="menu_about">Жоба жайлы</string>
    <string name="fill_all">Ақпаратты толтырыңыз</string>
    <string name="login_or_pass_error">Логин немесе құпия сөз қате</string>
    <string name="profile_lesson">Пәндерді таңдаңыз</string>
    <string name="can_not_find_ver">Can not find subject version</string>
    <string name="del_subjects_title">Сабақтарды өшіру</string>
    <string name="del_profile_subjects">Өшіруді қалайсыз ба?</string>
    <string name="profile_subjects_deleted">Сабақтар сәтті өшірілді!</string>
    <string name="yes">Иә</string>
    <string name="no">Жоқ</string>
    <string name="check_inet">Интернет байланысыңызды тексерініз</string>
    <string name="add_subjects">Профильный сабақ енгізу</string>
    <string name="choose_profile_sub1">1 інші профильный сабақты таңдаңыз</string>
    <string name="choose_profile_sub2">2 інші профильный сабақты таңдаңыз</string>
    <string name="ent_point">Балл</string>
    <string name="add_advice">Кеңес енгізу</string>
    <string name="advice_report">Кеңес Репорт</string>
    <string name="previousYear">2019 - 2020</string>
    <string name="currentYear">2020 - 2021</string>
    <string name="uploadNewsImage">Жаңалық суретін енгізіңіз</string>
    <string name="news_title">Тақырыбы</string>
    <string name="news_desc">Мәтіні</string>
    <string name="add">Енгізу</string>
    <string name="photoLoading">Сурет жүктеліп жатыр</string>
    <string name="uploaded">Сурет жүктелді</string>
    <string name="image_error">Сурет жүктелуде қате кетті, басынан қайталаңыз</string>
    <string name="change_image">Суретті өзгерту</string>
    <string name="news_added">Жаңалық енгізілді</string>
    <string name="data_loading">Күте тұрыңыз, ақпараттар жүктеліп жатыр..</string>
    <string name="calcSpecBtn">Балл бойынша білу</string>
    <string name="subjects_added">Сабақтар енгізілді</string>
    <string name="delete">Өшіру</string>
    <string name="edit">Өзгерту</string>
    <string name="calc">Есептеу</string>
    <string name="next">Жалғастыру</string>
    <string name="submit">Жіберу</string>
    <string name="choose_profession">Мамандық таңдаңыз</string>
    <string name="choose_bagdarlama">Бағдарлама таңдаңыз</string>
    <string name="choose_subject_pair">Профильды сабақ таңдаңыз</string>
    <string name="uploadUniverImage">Университет логосын енгізіңіз</string>
    <string name="univer_name">Атын енгізіңіз</string>
    <string name="univer_location">Қаласын енгізіңіз</string>
    <string name="univer_code">Кодын енгізіңіз</string>
    <string name="ceo">CEO</string>
    <string name="project_developer">Project Developer</string>
    <string-array name="subjects1">
        <item>таңдау</item>
        <item>Шығармашылық емтихан</item>
        <item>Математика</item>
        <item>Физика</item>
        <item>Химия</item>
        <item>Биология</item>
        <item>География</item>
        <item>Дүниежүзі тарихы</item>
        <item>Қазақ тілі</item>
        <item>Қазақ әдебиеті</item>
        <item>Орыс тілі</item>
        <item>Орыс әдебиеті</item>
        <item>Шет тілі</item>
        <item>Адам. Қоғам. Құқық</item>
    </string-array>
    <string-array name="blockList">
        <item>B001 - Педагогика және психология</item>
        <item>B002 - Мектепке дейінгі оқыту және тәрбиелеу</item>
        <item>B003 - Бастауышта оқыту педагогикасы мен әдістемесі</item>
        <item>B004 - Бастапқы әскери дайындық мұғалімдерін даярлау</item>
        <item>B005 - Дене шынықтыру мұғалімдерін даярлау</item>
        <item>B006 - Музыка мұғалімдерін даярлау</item>
        <item>B007 - Көркем еңбек және сызу мұғалімдерін даярлау</item>
        <item>B008 - Құқық және экономика негіздері мұғалімдерін даярлау</item>
        <item>B009 - Математика мұғалімдерін даярлау</item>
        <item>B010 - Физика мұғалімдерін даярлау</item>
        <item>B011 - Информатика мұғалімдерін даярлау</item>
        <item>B012 - Химия мұғалімдерін даярлау</item>
        <item>B013 - Биология мұғалімдерін даярлау</item>
        <item>B014 - География мұғалімдерін даярлау</item>
        <item>B015 - Гуманитарлық пәндер мұғалімдерін даярлау</item>
        <item>B016 - Қазақ тілі мен әдебиеті мұғалімдерін даярлау</item>
        <item>B017 - Орыс тілі мен әдебиеті мұғалімдерін даярлау</item>
        <item>B018 - Шет тілі мұғалімдерін даярлау</item>
        <item>B019 - Әлеуметтік педагогика және өзін-өзі тану мамандарын даярлау</item>
        <item>B020 - Арнайы педагогика</item>
        <item>B021 - Орындаушылық өнер</item>
        <item>B026 - Композиция</item>
        <item>B027 - Театр өнері</item>
        <item>B028 - Хореография</item>
        <item>B029 - Аудиовизуалды құрылғылар және медиа өндіріс</item>
        <item>B030 - Бейнелеу өнері</item>
        <item>B031 - Сән, интерьер дизайны және өнеркәсіп дизайны</item>
        <item>B032 - Философия және этика</item>
        <item>B033 - Дінтану және теология</item>
        <item>B034 - Тарих және археология</item>
        <item>B035 - Түркітану және шығыстану</item>
        <item>B036 - Аударма ісі</item>
        <item>B037 - Филология</item>
        <item>B038 - Әлеуметтану</item>
        <item>B039 - Мәдениеттану</item>
        <item>B040 - Саясаттану және азаматтық құқықтану</item>
        <item>B041 - Психология</item>
        <item>B042 - Журналистика және репортер ісі</item>
        <item>B043 - Кітапхана ісі,ақпараттарды өңдеу және мұрағат ісі</item>
        <item>B044 - Менеджмент және басқару</item>
        <item>B045 - Аудит және салық салу</item>
        <item>B046 - Қаржы, экономика, банк және сақтандыру ісі</item>
        <item>B047 - Маркетинг және жарнама</item>
        <item>B048 - Еңбек дағдылары</item>
        <item>B049 - Құқық</item>
        <item>B050 - Биологиялық және сабақтас ғылымдар</item>
        <item>B051 - Қоршаған орта</item>
        <item>B052 - Жер туралы ғылым</item>
        <item>B053 - Химия</item>
        <item>B054 - Физика</item>
        <item>B055 - Математика және статистика</item>
        <item>B056 - Механика</item>
        <item>B057 - Ақпараттық технологиялар</item>
        <item>B058 - Ақпараттық қауіпсіздік</item>
        <item>B059 - Коммуникациялар және коммуникациялық технологиялар</item>
        <item>B060 - Химиялық инженерия және процестер</item>
        <item>B061 - Материалтану және технологиялар</item>
        <item>B062 - Электр техникасы және энергетика</item>
        <item>B162 - Жылу энергетикасы</item>
        <item>B063 - Электр техникасы және автоматтандыру</item>
        <item>B064 - Механика және металл өңдеу</item>
        <item>B065 - Автокөлік құралдары</item>
        <item>B066 - Теңіз көлігі және технологиялары</item>
        <item>B067 - Әуе көлігі және технологиялары</item>
        <item>B167 - Ұшатын аппараттар мен қозғалтқыштарды ұшуда пайдалану</item>
        <item>B068 - Азық-түлік өнімдерінің өндірісі</item>
        <item>B069 - Материалдар өндірісі (шыны, қағаз, пластик,ағаш)</item>
        <item>B070 - Тоқыма: киім, аяқ киім және былғары бұйымдары</item>
        <item>B071 - Тау-кен ісі және пайдалы қазбаларды өндіру</item>
        <item>B171 - Металлургия</item>
        <item>B271 - Мұнай-газ ісі</item>
        <item>B072 - Фармацевтикалық өндіріс технологиясы</item>
        <item>B073 - Сәулет</item>
        <item>B074 - Қала құрылысы, құрылыс жұмыстары және азаматтық құрылыс</item>
        <item>B075 - Кадастр және жерге орналастыру</item>
        <item>B076 - Стандарттау, сертификаттау және метрология (сала бойынша)</item>
        <item>B077 - Өсімдік шаруашылығы</item>
        <item>B078 - Мал шаруашылығы</item>
        <item>B079 - Орман шаруашылығы</item>
        <item>B080 - Балық шаруашылығы</item>
        <item>B081 - Жерге орналастыру</item>
        <item>B082 - Су ресурстары және суды пайдалану</item>
        <item>B183 - Агроинженерия</item>
        <item>B083 - Ветеринария</item>
        <item>B084 - Мейірбике ісі</item>
        <item>B085 - Фармация</item>
        <item>B086 - Жалпы медицина</item>
        <item>B087 - Стоматология</item>
        <item>B088 - Педиатрия</item>
        <item>B089 - Қоғамдық денсаулық сақтау</item>
        <item>B091 - Туризм</item>
        <item>B092 - Тынығу</item>
        <item>B093 - Мейрамхана ісі және мейманхана бизнесі</item>
        <item>B094 - Санитарлық- профилактикалық іс-шаралар</item>
        <item>B095 - Көлік қызметтері</item>
        <item>B096 - Әлеуметтік жұмыс</item>

    </string-array>
</resources>